<resources>
    <string name="app_name" translatable="false">Quhizz</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="quiz_categories" translatable="false">Categories</string>
    <string name="news_placeholder" translatable="false">Quiz Description</string>
    <string name="sports_info_placeholder" translatable="false">Quiz Subtitle</string>
    <string name="question_text" translatable="false">Question Placeholder</string>
    <string name="choice_a" translatable="false">A Placeholder</string>
    <string name="choice_b" translatable="false">B Placeholder</string>
    <string name="choice_c" translatable="false">C Placeholder</string>
    <string name="choice_d" translatable="false">D Placeholder</string>
    <string name="submit_button" translatable="false">Submit</string>
    <string name="login" translatable="false">Login</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="click_register" translatable="false">Create Account</string>
    <string name="register" translatable="false">Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="f_name" translatable="false">First Name</string>
    <string name="l_name" translatable="false">Last Name</string>
    <string name="birth_set" translatable="false">Birthday</string>
    <string name="click_to_login" translatable="false">Already have an account</string>
    <string name="about" translatable="false">About</string>
    <string name="datepicker" translatable="false">Date</string>
    <string name="date" translatable="false">Date: </string>
    <string name="to_know_more_about_us_please_visit_our_github_account" translatable="false">To know more about us please visit our github account</string>

    <string-array name="quiz_categories">
        <item>Math</item>
        <item>Science</item>
        <item>Technology</item>
        <item>Trivia</item>
        <item>History</item>
        <item>Geography</item>
    </string-array>

    <string-array name="quiz_subtitle">
        <item>Click to take a Math quiz</item>
        <item>Click to take a Science quiz</item>
        <item>Click to take a Tech quiz</item>
        <item>Click to take a Trivia quiz</item>
        <item>Click to take a History quiz</item>
        <item>Click to take a Geography quiz</item>
    </string-array>

    <array name="category_images">
        <item>@drawable/math</item>
        <item>@drawable/science</item>
        <item>@drawable/tech</item>
        <item>@drawable/trivia</item>
        <item>@drawable/history</item>
        <item>@drawable/geography</item>
    </array>
    
    <string-array name="spinner_choices">
        <item>Descending</item>
        <item>Ascending</item>
        <item>Alphabetical</item>
    </string-array>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="my_account" translatable="false">My Account</string>
    <string name="github_account" translatable="false">Github Account</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="leaderboards" translatable="false">Leaderboards</string>
    <string name="user_name" translatable="false">Username</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="ready_to_play" translatable="false">Ready to Play?</string>
    <string name="play" translatable="false">Play</string>
    <string name="github_source" translatable="false">Github Source Code</string>
    <string name="MMDDYYYY" translatable="false">MM/DD/YYYY</string>
    <string name="Bithday" translatable="false">Birthday</string>
    <string name="set_birthdate" translatable="false">Set Birthdate</string>
</resources>