<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70DBA3"
    android:backgroundTint="#FFFFFF"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".QuizActivity">


    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/choices_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="22dp"
        android:text="@string/question_text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/choices_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/choice_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/choice_a"
            android:button="@drawable/smooth_radio_button"/>

        <RadioButton
            android:id="@+id/choice_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/choice_b"
            android:button="@drawable/smooth_radio_button"/>

        <RadioButton
            android:id="@+id/choice_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/choice_c"
            android:button="@drawable/smooth_radio_button"/>

        <RadioButton
            android:id="@+id/choice_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/choice_d"
            android:button="@drawable/smooth_radio_button"/>

    </RadioGroup>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choices_layout"
        android:layout_marginTop="40dp"
        android:backgroundTint="#FA70DCA4"
        android:text="@string/submit_button" />

</RelativeLayout>