<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#413543"
    android:backgroundTint="#413543"
    tools:context=".AboutFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="407dp"
            android:layout_height="250dp"
            android:background="#98EECC"
            android:backgroundTint="#98EECC"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="top|center"
            android:text="@string/my_account"
            android:textColor="#413543"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.004" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="140dp"
            android:layout_height="52dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/github_source"
            android:textColor="#FEFEFE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.739" />

        <ImageView
            android:id="@+id/source_code"
            android:layout_width="56dp"
            android:layout_height="65dp"
            android:onClick="goToRepository"
            android:src="@drawable/github_733553"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.245"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.635" />


        <ImageView
            android:id="@+id/image_logout"
            android:layout_width="65dp"
            android:layout_height="63dp"
            android:layout_marginBottom="244dp"
            android:src="@drawable/quit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.722"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="logOut"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="140dp"
            android:layout_height="52dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/log_out"
            android:textColor="#FEFEFE"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.815"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.739" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profileImageView"
            android:layout_width="136dp"
            android:layout_height="126dp"
            android:src="@drawable/user_profile"
            app:shapeAppearanceOverlay="@style/circular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.119" />

        <TextView
            android:id="@+id/usernameAbout"
            android:layout_width="140dp"
            android:layout_height="52dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="#413543"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.693"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.106" />

        <TextView
            android:id="@+id/nameAbout"
            android:layout_width="140dp"
            android:layout_height="52dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/full_name"
            android:textColor="#413543"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.693"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.215" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>

